Expose Social posts on public API
